--- a/cv.tex
+++ b/cv.tex
@@ -44,6 +44,7 @@
     \underline{\href{mailto:martin@othamar.net}{martin@othamar.net}}
     ~
   \section{Web \& Git}
+  	\underline{\href{http://martinothamar.github.io}{martinothamar.github.io}}
     \underline{\href{https://no.linkedin.com/in/martinothamar}{linkedin.com/in/martinothamar}}
     \underline{\href{https://github.com/martinothamar}{github.com/martinothamar}}
     ~
@@ -75,7 +76,7 @@
 \begin{entrylist}
   \entry
     {Sept. 15 - Now}
-    {IT Consultant}
+    {Co-Founder \& IT Consultant}
     {EnterCon DA, Kristiansand/Oslo}
     {Delivering web sites, apps and marketing solutions to businesses
     in southern and eastern Norway. I am responsible for development,
@@ -184,7 +185,7 @@
   \entry
     {Aug. 15 - Now}
     {UiA Schedule for Android}
-    {Solo project}
+    {EnterCon project}
     {An Android application for displaying the schedule is a user-friendly,
     mobile-friendly manner. The scraping-logic from the C\# Schedule Scraper below
     was ported to Java so that the app runs natively.
