--- a/cv.tex
+++ b/cv.tex
@@ -84,7 +84,7 @@
   \entry
     {Aug. 15 - Now}
     {Software Developer}
-    {meQuire AS, Kristiansand}
+    {meQuire Solutions AS, Kristiansand}
     {Back end development on a software-stack consisting of the following 
     technologies NodeJS, HAPI, RethinkDB using Amazon Web Services hosting.\\}
   \entry
@@ -121,14 +121,14 @@
 \begin{entrylist}
   \entry
     {Aug. 15 - Now}
-    {Master's Degree (Msc) in Information Systems}
+    {Master's Degree (MSc) in Information Systems}
     {University of Agder}
     {Information Systems Master's Degree focusing on Systems Development
-    /Software Engineering, Enterprise Systems, Business Development and 
+    /Software Engineering, Enterprise Systems (ERP), Business Development and 
     IT Project Management.\\}
   \entry
     {Aug. 13 - June 15}
-    {Bachelor's Degree (Bsc) in IT and Information Systems}
+    {Bachelor's Degree (BSc) in IT and Information Systems}
     {University of Agder}
     {An IT and Information Systems education focused on the interdisciplinarity of
     systems development and project/business management subjects.\\
