--- a/cv.tex
+++ b/cv.tex
@@ -22,9 +22,9 @@
 \begin{document}
 \header{Martin}{Othamar}
       {developer}
-      
-% Fake text to add separator    
-\vspace{1.15cm}  
+
+% Fake text to add separator
+\vspace{1.15cm}
 \fcolorbox{white}{gray}{\parbox{\dimexpr\textwidth-2\fboxsep-2\fboxrule}{%
 .....
 }}
@@ -85,8 +85,8 @@
     {Aug. 15 - Now}
     {Software Developer}
     {meQuire Solutions AS, Kristiansand}
-    {Back end development on a software-stack consisting of the following 
-    technologies NodeJS, HAPI, RethinkDB using Amazon Web Services hosting.\\}
+    {Part time back end development on a software-stack consisting of the following
+    technologies; NodeJS, HAPI, RethinkDB.\\}
   \entry
     {Aug. 15 - Now}
     {Teaching Assistant}
@@ -99,19 +99,19 @@
     {Frontica Business Solutions, Kristiansand}
     {Full stack development and full remake/modernization of legacy Information Quality system
     on the .NET platform with C\# with technologies like ASP.NET Web Api 2,
-    MVC, Windows Service, WCF, 
+    MVC, Windows Service, WCF,
     Twitter Bootstrap front end with JS/jQuery. Worked agile with Scrum on TFS 2012 /w TFVC
     and BDD for testing.
-    \emph{Title of the Thesis: 
-    "The Reengineering of Frontica Business Solutions' Information Quality System".} 
+    \emph{Title of the Thesis:
+    "The Reengineering of Frontica Business Solutions' Information Quality System".}
     Grade: \textbf{A}.\\}
   \entry
     {Sept. 14 - Dec. 14}
     {Internship - IS-302}
     {Frontica Business Solutions, Kristiansand}
-    {Documentation of in-house VBA application as well as full stack development of 
+    {Documentation of in-house VBA application as well as full stack development of
     in-house Active Directory
-    user information reporting service on the .NET platform with C\#. ASP.NET MVC, 
+    user information reporting service on the .NET platform with C\#. ASP.NET MVC,
     QUARTZ.NET for scheduled jobs
     and Twitter Bootstrap, JS/jQuery on the front end. Grade: \textbf{A}.\\}
 \end{entrylist}
@@ -124,7 +124,7 @@
     {Master's Degree (MSc) in Information Systems}
     {University of Agder}
     {Information Systems Master's Degree focusing on Systems Development
-    /Software Engineering, Enterprise Systems (ERP), Business Development and 
+    /Software Engineering, Enterprise Systems (ERP), Business Development and
     IT Project Management.\\}
   \entry
     {Aug. 13 - June 15}
@@ -132,7 +132,7 @@
     {University of Agder}
     {An IT and Information Systems education focused on the interdisciplinarity of
     systems development and project/business management subjects.\\
-    \emph{Title of the Thesis: "The Reengineering of Frontica Business Solutions' 
+    \emph{Title of the Thesis: "The Reengineering of Frontica Business Solutions'
     Information Quality System". Grade \textbf{A}}.\\}
   \entry
     {Aug. 09 - June 12}
@@ -217,7 +217,7 @@
     {Nettverket-SB}
     {Student company, {{\O}}stfold University College}
     {Career portal for newly educated and students.
-    Built on the LAMP-stack with a homemade MVC framework and 
+    Built on the LAMP-stack with a homemade MVC framework and
     Twitter Bootstrap + jQuery for the front end.
     \underline{\href{https://github.com/martinothamar/Nettverket-SB}{Github repository}}.}
 \end{entrylist}
