--- a/cv.tex
+++ b/cv.tex
@@ -44,7 +44,7 @@
     \underline{\href{mailto:martin@othamar.net}{martin@othamar.net}}
     ~
   \section{Web \& Git}
-  	\underline{\href{http://martinothamar.github.io}{martinothamar.github.io}}
+  	%\underline{\href{http://martinothamar.github.io}{martinothamar.github.io}}
     \underline{\href{https://no.linkedin.com/in/martinothamar}{linkedin.com/in/martinothamar}}
     \underline{\href{https://github.com/martinothamar}{github.com/martinothamar}}
     ~
@@ -80,7 +80,7 @@
     {EnterCon DA, Kristiansand/Oslo}
     {Delivering web sites, apps and marketing solutions to businesses
     in southern and eastern Norway. I am responsible for development,
-    hosting and internal IT infrastructure like website, ERP (Odoo) etc.\\}
+    hosting and internal IT infrastructure.\\}
   \entry
     {Aug. 15 - Now}
     {Software Developer}
@@ -189,7 +189,7 @@
     {An Android application for displaying the schedule is a user-friendly,
     mobile-friendly manner. The scraping-logic from the C\# Schedule Scraper below
     was ported to Java so that the app runs natively.
-    \underline{\href{https://github.com/martinothamar/UiA-Timeplan-Android}
+    \underline{\href{https://github.com/EnterCon/UiA-Timeplan-Android}
     {Github repository}}.\\}
   \entry
     {June 15}
@@ -197,7 +197,7 @@
     {Solo project}
     {A C\# console application scraping university programme schedule information
     of their webpage, outputting JSON.
-    \underline{\href{https://github.com/martinothamar/UiA-ScheduleGrabber}
+    \underline{\href{https://github.com/EnterCon/UiA-ScheduleScraper}
     {Github repository}}.\\}
   \entry
     {Aug. 14 - Dec. 14}
