--- a/cv.tex
+++ b/cv.tex
@@ -38,8 +38,9 @@
     Married
   	~
   \section{Address}
-    Trollkleiva, 8
-    4638, Kristiansand, Norway
+    Trollkleiva 8\\
+    4638 Kristiansand S\\
+    Norway
     ~
   \section{Phone}
     +47 47 35 60 90
@@ -47,14 +48,14 @@
   \section{Mail}
     \underline{\href{mailto:martin@othamar.net}{martin@othamar.net}}
     ~
-  \section{Web \& Git}
+  \section{Web}
   	%\underline{\href{http://martinothamar.github.io}{martinothamar.github.io}}
 	\vspace{0.10cm}
     \underline{\href{https://no.linkedin.com/in/martinothamar}{linkedin.com/in/martinothamar}}
 	\vspace{0.10cm}
-    \underline{\href{http://stackoverflow.com/story/martinothamar}{stackoverflow.com/story}}
+    \underline{\href{https://stackoverflow.com/story/martinothamar}{stackoverflow.com/story}}
 	\vspace{0.10cm}
-    \underline{\href{http://stackoverflow.com/cv/martinothamar}{stackoverflow.com/cv}}
+    \underline{\href{https://stackoverflow.com/cv/martinothamar}{stackoverflow.com/cv}}
 	\vspace{0.10cm}
     \underline{\href{https://github.com/martinothamar}{github.com/martinothamar}}
     ~
@@ -150,8 +151,8 @@
 \begin{entrylist}
   \entry
     {Aug. 13 - June 15}
-    {Bachelor's Degree (BSc) in IT and Information Systems}
-    {University of Agder}
+    {BSc in IT and Information Systems}
+    {University of Agder, Kristiansand}
     {An IT and Information Systems education focused on the interdisciplinarity of
     systems development and project/business management subjects.\\
     \emph{Title of the Thesis: "The Reengineering of Frontica Business Solutions'
@@ -159,7 +160,7 @@
   \entry
     {Aug. 09 - June 12}
     {University Admissions Certification}
-    {Toppidrettsgymnaset i Telemark}
+    {Toppidrettsgymnaset i Telemark, Skien}
     {Top-level Sports Upper secondary school.
     Main subjects: Football (soccer), International English, Sociology and Social Anthropology,
     Politics and Human Rights, Social Studies English.}
@@ -212,7 +213,7 @@
     the backend stack and native Android application.
     Backend stack consisted of a NodeJS (v6.x LTS) TypeScript GraphQL API with
     a PostgreSQL database using the ApolloStack libraries/toolset, ExpressJS http/ws server
-    framework and passport.js authentication library.
+    framework and Twitter Digits for authentication.
     \underline{Private repo}.\\}
   \entry
     {Aug. 15 - Oct. 15}
