--- a/cv.tex
+++ b/cv.tex
@@ -15,13 +15,13 @@
     colorlinks=true,
     linkcolor=blue
 }
-\addbibresource{bibliography.bib}
 \RequirePackage{xcolor}
 \definecolor{pblue}{HTML}{0395DE}
 
 \begin{document}
-\header{Martin}{Othamar}
-      {full-stack developer}
+\vspace{0.2cm}
+\header{Boris }{TRAN}
+      {Devops, Project Manager, Architect}
 
 % Fake text to add separator
 \vspace{1.15cm}
@@ -31,174 +31,132 @@
 
 % In the aside, each new line forces a line break
 \begin{aside}
-  \includegraphics[scale=0.40]{img/meg2.jpg}
-    ~
+%  \includegraphics[scale=0.40]{img/meg2.jpg}
+  \vspace{0.4cm}
+    ~		
   \vspace{0.65cm}
-  \section{Civil status}
-    Married
-  	~
-  \section{Address}
-    Trollkleiva 8\\
-    4638 Kristiansand S\\
-    Norway
+  \section{Mail}
+    \underline{\href{mailto:amallyn@pm.me}{amallyn@pm.me}}
     ~
   \section{Phone}
-    +47 47 35 60 90
+    +33 6 40 43 34 79
     ~
-  \section{Mail}
-    \underline{\href{mailto:martin@othamar.net}{martin@othamar.net}}
+  \section{Address}
+    43 Boulevard de Longchamp\\
+    Nantes\\
+    France (CET)
     ~
   \section{Web}
   	%\underline{\href{http://martinothamar.github.io}{martinothamar.github.io}}
 	\vspace{0.10cm}
-    \underline{\href{https://no.linkedin.com/in/martinothamar}{linkedin.com/in/martinothamar}}
+    \underline{\href{https://github.com/Amallyn}{github.com/Amallyn}}
 	\vspace{0.10cm}
-    \underline{\href{https://stackoverflow.com/story/martinothamar}{stackoverflow.com/story}}
+    \underline{\href{https://twitter.com/Amallyn1}{twitter.com/Amallyn1}}
 	\vspace{0.10cm}
-    \underline{\href{https://stackoverflow.com/cv/martinothamar}{stackoverflow.com/cv}}
-	\vspace{0.10cm}
-    \underline{\href{https://github.com/martinothamar}{github.com/martinothamar}}
+    \underline{\href{https://www.linkedin.com/in/boristran}{www.linkedin.com/in/boristran}}
     ~
-  \section{Programming}
-    \includegraphics[scale=0.22]{img/programming.png}
+  \section{Profile}
+    \\
+    \includegraphics[scale=0.8]{img/skills.png}
     ~
-  \section{OS Preference}
-    \asidelist{\textbf{mac OS}}
-    {\includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}}
-    \asidelist{\textbf{Linux}}
-    {\includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star_empty.png}}
-    \asidelist{\textbf{Windows}}
-    {\includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star_empty.png}
-    \includegraphics[scale=0.30]{img/star_empty.png}}
+  \section{Languages}
+    \\
+    \textbf{French}: Native\\
+    \textbf{English}: C1\\
+    \textbf{Japanese}: A2
     ~
 \end{aside}
 
-\vspace{0.75cm}
+\vspace{0.4cm}
 \section{Experience}
 \begin{entrylist}
   \entry
-    {Nov. 15 - Now}
-    {System Developer, Web}
-    {Inkrement AS, Kristiansand}
-    {Developing ed-tech related web \& mobile applications on stacks typically involving .NET C\# MVC/Web API on the back end
-    and Razor/HTML/CSS/JS on the front end, and mobile development on native Android with Java.\\\\
-    Wrote the ASP.NET Web API, SQLServer backend, including a React + Redux CMS front end and the native Android
-    application for Eksamensklar (\underline{\href{http://erduklar.no/}{erduklar.no}}),
-    a math exam preparation app for 10th graders in Norway.\\\\
-    Worked on various pieces of the Campus Inkrement 
-    (\underline{\href{https://campus.inkrement.no}{campus.inkrement.no}})
-    flipped learning platform including the front
-    page, initial infrastructure and administration for the Pro/Premium model, exception/error tracking system for the front and
-    back end, as well as a Google Analytics reporting component allowing us better insight into usage patterns across the
-    platform.\\}
+    {2021 - 2022}
+    {Project Manager}
+    {French Foreign Ministry, France}
+    {Our team is in charge of operations and supply chain management, hardware and software 	    tests and support for our Embassies servers.\\
+    Project management also encompasses processes optimization between departments. I worked on \textbf{Data visualization tools} for decision taking to \textbf{optimize} our \textbf{operations management}.  A Proof of concept using \textbf{Grafana}, \textbf{Prometheus} and a Python custom exporter led to an in-house software customization.\\
+    Maintaining a customized Debian distribution. Package deployment and configuration is handled by \textbf{Ansible}. CI with gitlab has yet to be researched.\\}
   \entry
-    {Sept. 15 - Now}
-    {Co-Founder \& IT Consultant}
-    {EnterCon AS, Kristiansand/Oslo}
-    {A small consulting company delivering software-solutions, typically web \& mobile apps, software design, 
-    development and marketing and innovation consulting.\\
-	Developed and managed projects delivering web-apps, servers and mobile applications in both native 
-	(iOS with Swift \& Android with Java) and hybrid formats (e.g. Ionic + Cordova + Meteor). \\}
+    {2019 - 2021}
+    {System and Network Administrator, Support}
+    {French Embassy in Thailand}
+    {Handling the \textbf{Covid crisis} demonstrated the challenges of offering \textbf{quick responses} despite the lack of readiness and user training in \textbf{remote solutions}.\\
+    In a fast evolving environment, making full use of all the resources at disposal and priority management are essential while safeguarding security standards.\\}
   \entry
-    {Aug. 15 - Nov. 15}
-    {Software Developer}
-    {meQuire Solutions AS, Kristiansand}
-    {Part time back end development on a software-stack consisting of the following
-    technologies; NodeJS, HAPI, RethinkDB.\\}
+    {2015 - 2019}
+    {System and Network Administrator, Support}
+    {French Mission to the UN, NYC}
+    {\textbf{Multilateral Diplomacy} is a very challenging environment.
+    System and network administration reaches extremely \textbf{high security standards}.\\
+    User support is paramount especially during heads of states events like the United Nations General Assembly, their satisfaction is greatly satisfying.\\
+    I continued some prior research and tests on \textbf{containers} (Docker and LXC). \\}
   \entry
-    {Aug. 15 - Dec. 15}
-    {Teaching Assistant}
-    {University of Agder, Kristiansand}
-    {Helping third year students in the IT and Information Systems Bachelor's degree programme
-    learn in IS-213: Open Source Development.\\}
+    {2011 - 2015}
+    {Devops, System Administrator}
+    {French Foreign Ministry, France}
+    {At the dawn of devops adoption, after \textbf{taking ownership of the servers} infrastructure, \textbf{I researched devops tools} (ansible, salt, puppet, chef).\\ I carried \textbf{tests to deployment and processes migration} on the infrastructure. Since then, its evolution and wide adoption is one of the achievements I am mostly proud of. \\}
   \entry
-    {Jan. 15 - May 15}
-    {Bachelor thesis - IS-304}
-    {Frontica Business Solutions, Kristiansand}
-    {Full stack development and full remake/modernization of legacy Information Quality system
-    on the .NET platform with C\# with technologies like ASP.NET Web Api 2,
-    MVC, Windows Service, WCF,
-    Twitter Bootstrap front end with JS/jQuery. Worked agile with Scrum on TFS 2012 /w TFVC
-    and BDD for testing.
-    \emph{Title of the Thesis:
-    "The Reengineering of Frontica Business Solutions' Information Quality System".}
-    Grade: \textbf{A}.\\}
+    {2010 - 2011}
+    {System and Network Administrator, Support}
+    {French Institute in the UK, London}
+    {I researched, designed the architecture and deployed \textbf{high availability virtual servers} (Linux Kvm).\\
+    System administration encompassed \textbf{Samba/Ldap}, the French Institute library and cinema softwares, Nas backups. I maintained and prepared the network on a 3-site architecture prior to a future VOIP deployment. \\}
   \entry
-    {Sept. 14 - Dec. 14}
-    {Internship - IS-302}
-    {Frontica Business Solutions, Kristiansand}
-    {Documentation of in-house VBA application as well as full stack development of
-    in-house Active Directory
-    user information reporting service on the .NET platform with C\#. ASP.NET MVC,
-    QUARTZ.NET for scheduled jobs
-    and Twitter Bootstrap, JS/jQuery on the front end. Grade: \textbf{A}.\\}
+    {2006 - 2010}
+    {Webmaster}
+    {French Embassy to the United Kingdom, London}
+    {In the Press Department, I led the France in the United Kingdom webmaster team to merge all websites into a single one. I developed merging tools in \textbf{Python} for database and media.\\
+I communicated best practices (XHTML, CSS), maintained high availability of the website and supported users.
+I negociated with Hosting providers to improve quality of service and reduce costs. \\}\end{entrylist}
+\begin{entrylist}
+  \entry
+    {2006}
+    {Quality Assurance Tester}
+    {Square Enix, London}
+    {Translation proof reading from English and Japanese to French. Bug reporting \\}  \entry
+    {2002 - 2004}
+    {Business creation of a specialized computer parts online shop}
+    {France}
+    {I improved a \textbf{LAMP} template website,  managed hosting.\\
+    \textbf{Stock management and logistics} were the most challenging tasks. \\}
+\entry
+    {2000 - 2001}
+    {R\&D Developer}
+    {Duran, Paris}
+    {As a team member, I worked on Virtual Observer, an online 3D Real Time application for following the Vendée Globe skipper race (\textbf{VC++, OpenGL, SQLServer}). I prototyped a small physics library and developed 3D optimization for \textbf{Virtual Skipper 2}, a skipper racing game. \\}
+  \entry
+    {1999 - 2000}
+    {Game Developer}
+    {Eden-Studios, a development studio, France}
+    {I developed a 3D audio library for \textbf{V-Rally 2 PC}, a rally driving game. (\textbf{VC}) \\}
 \end{entrylist}
-
-
-\newpage
+    
 \section{Education}
 \begin{entrylist}
   \entry
-    {Aug. 13 - June 15}
-    {BSc in IT and Information Systems}
-    {University of Agder, Kristiansand}
-    {An IT and Information Systems education focused on the interdisciplinarity of
-    systems development and project/business management subjects.\\
-    \emph{Title of the Thesis: "The Reengineering of Frontica Business Solutions'
-    Information Quality System". Grade \textbf{A}}.\\}
+    {2005 - 2006}
+    {Cambridge Certificate in Advanced English}
+    {London}
+    {Cambridge First Certificate in English (FCE) and Certificate in Advanced English (CAE).\\}
   \entry
-    {Aug. 09 - June 12}
-    {University Admissions Certification}
-    {Toppidrettsgymnaset i Telemark, Skien}
-    {Top-level Sports Upper secondary school.
-    Main subjects: Football (soccer), International English, Sociology and Social Anthropology,
-    Politics and Human Rights, Social Studies English.}
+    {1998 - 1999}
+    {1-year postgraduate diploma}
+    {UNIGE, EPFL, Switzerland, Lyon I University, France}
+    {Computer Graphics and Networks\\
+    European diploma in Computer Visualization and communication, EPFL Lausanne, UNIGE Geneva, Switzerland, Lyon I University, France\\}
+  \entry
+    {1994 - 1998}
+    {M.Sc., B.Sc. and 2-year undergraduate diploma}
+    {Lyon I University, France}
+    {Mathematics, Science and Computer Science\\}
 \end{entrylist}
-
-
 
 \begin{aside}
   \vspace{1cm}
-  \section{Places lived}
-    \includegraphics[scale=0.62]{img/norway.png}
-    ~
-  \section{Languages}
-    \asidelist{\textbf{Norwegian}}
-    {\includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}}
-    \asidelist{\textbf{English}}
-    {\includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star_empty.png}}
-    \asidelist{\textbf{Faroese}}
-    {\includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star_empty.png}
-    \includegraphics[scale=0.30]{img/star_empty.png}
-    \includegraphics[scale=0.30]{img/star_empty.png}}
-    \asidelist{\textbf{German}}
-    {\includegraphics[scale=0.30]{img/star.png}
-    \includegraphics[scale=0.30]{img/star_empty.png}
-    \includegraphics[scale=0.30]{img/star_empty.png}
-    \includegraphics[scale=0.30]{img/star_empty.png}
-    \includegraphics[scale=0.30]{img/star_empty.png}}
-    ~
+  \section{Skills}
+    \\
+    \includegraphics[scale=0.68]{img/skills2.png}    ~
 \end{aside}
 
 
@@ -206,50 +164,27 @@
 \section{Projects}
 \begin{entrylist}
   \entry
-    {Oct. 16 - Now}
-    {Brobet API \& Android app}
-    {Project with Sondre Sallaup}
-    {Spare time project with Sondre Sallaup, where I created and maintained
-    the backend stack and native Android application.
-    Backend stack consisted of a NodeJS (v6.x LTS) TypeScript GraphQL API with
-    a PostgreSQL database using the ApolloStack libraries/toolset, ExpressJS http/ws server
-    framework and Twitter Digits for authentication.
-    \underline{Private repo}.\\}
+    {2021 - 2022}
+    {Kusama Validator Node Administration}
+    {Blockchain}
+    {I maintain two Kusama Validator Nodes using Ansible.\\
+    I also research other nodes stack.\\}
   \entry
-    {Aug. 15 - Oct. 15}
-    {UiA Schedule for Android}
-    {EnterCon project}
-    {An Android application for displaying the schedule is a user-friendly,
-    mobile-friendly manner. The scraping-logic from the C\# Schedule Scraper below
-    was ported to Java so that the app runs natively.
-    \underline{\href{https://github.com/EnterCon/UiA-Timeplan-Android}
-    {Github repository}}.\\}
+    {2021}
+    {Tor network crawler and search engine}
+    {Tor, Python, Docker}
+    {Spare time project. I developed a Tor network crawler and search engine practicing \textbf{Python} and \textbf{Docker}. \underline{\href{https://github.com/Amallyn/torcrawler}{github.com/Amallyn/torcrawler}}.\\}
   \entry
-    {June 15}
-    {UiA Schedule Scraper}
-    {Solo project}
-    {A C\# console application scraping university programme schedule information
-    of their webpage, outputting JSON.
-    \underline{\href{https://github.com/EnterCon/UiA-ScheduleScraper}
-    {Github repository}}.\\}
+    {2017 - 2019}
+    {POW Mining}
+    {Blockchain}
+    {Building nodes and miners from code was mandatory for mining. I did light customization of a Linux distribution and miners to optimize performance.}
 \end{entrylist}
 
-
-\section{Certifications}
-\begin{entrylist}
-  \entry
-    {Oct. 15}
-    {PRINCE2 Foundation certification}
-    {University of Agder, Kristiansand}
-    {Foundation-level Project Management certification.}
-\end{entrylist}
-
-\vspace{1.5cm}
-\begin{flushright}
-\emph{Martin Othamar}
-\end{flushright}
-\begin{flushright}
-\emph{\today}
-\end{flushright}
+%\vspace{1.5cm}
+%\end{flushright}
+%\begin{flushright}
+%\emph{\today}
+%\end{flushright}
 
 \end{document}
