Tor project rephrasing

--- a/cv.tex
+++ b/cv.tex
@@ -173,7 +173,7 @@ I negociated with Hosting providers to improve quality of service and reduce cos
     {2021}
     {Tor network crawler and search engine}
     {Tor, Python, Docker}
-    {Spare time project. I developed a Tor network crawler and search engine practicing \textbf{Python} and \textbf{Docker}. \underline{\href{https://github.com/Amallyn/torcrawler}{github.com/Amallyn/torcrawler}}.\\}
+    {For this spare time project, I developed a Tor network crawler and search engine practicing \textbf{Python} and \textbf{Docker}. \underline{\href{https://github.com/Amallyn/torcrawler}{github.com/Amallyn/torcrawler}}.\\}
   \entry
     {2017 - 2019}
     {POW Mining}
