--- a/cv.tex
+++ b/cv.tex
@@ -53,6 +53,8 @@
 	\vspace{0.10cm}
     \underline{\href{https://twitter.com/Amallyn1}{twitter.com/Amallyn1}}
 	\vspace{0.10cm}
+    \underline{\href{https://medium.com/@Amallyn}{medium.com/@Amallyn}}
+	\vspace{0.10cm}
     \underline{\href{https://www.linkedin.com/in/boristran}{www.linkedin.com/in/boristran}}
     ~
   \section{Profile}
